fix(#2550): change handling of data stream in extensions service endpoint (#2560)