@@ -49,7 +49,6 @@ import org.springframework.web.bind.annotation.RestController;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v2/rdfendpoints")
@@ -121,6 +120,7 @@ public class ExtensionsServiceEndpointResource extends AbstractAuthGuardedRestRe
                               String appId) {
     return installedElements
         .stream()
+        .filter(e -> !(e instanceof SpDataStream))  // DataStreams are not getting installed
         .anyMatch(e -> e.getAppId().equals(appId));
   }
 
@@ -139,17 +139,19 @@ public class ExtensionsServiceEndpointResource extends AbstractAuthGuardedRestRe
         .stream()
         .filter(s -> existingItems.stream().noneMatch(item -> s.getAppId().equals(item.getAppId())))
         .map(adapter -> makeItem(adapter, "adapter"))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<ExtensionsServiceEndpointItem> getAllDataStreamEndpoints(
       List<ExtensionsServiceEndpointItem> existingItems) {
     return getAllDataStreams()
         .stream()
-        .filter(s -> existingItems.stream().noneMatch(item -> s.getAppId().equals(item.getAppId())))
+        // compared to similar methods we use the elementId here instead of the appId
+        // because data streams are supposed to do not have an appId
+        .filter(s -> existingItems.stream().noneMatch(item -> s.getElementId().equals(item.getElementId())))
         .filter(s -> !s.isInternallyManaged())
         .map(stream -> makeItem(stream, "stream"))
-        .collect(Collectors.toList());
+        .toList();
   }
 
 
@@ -160,7 +162,7 @@ public class ExtensionsServiceEndpointResource extends AbstractAuthGuardedRestRe
         .stream()
         .filter(s -> existingItems.stream().noneMatch(item -> s.getAppId().equals(item.getAppId())))
         .map(source -> makeItem(source, "sepa"))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private List<ExtensionsServiceEndpointItem> getAllDataSinkEndpoints(
@@ -170,7 +172,7 @@ public class ExtensionsServiceEndpointResource extends AbstractAuthGuardedRestRe
         .stream()
         .filter(s -> existingItems.stream().noneMatch(item -> s.getAppId().equals(item.getAppId())))
         .map(source -> makeItem(source, "action"))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private ExtensionsServiceEndpointItem makeItem(NamedStreamPipesEntity entity, String type) {
@@ -178,7 +180,6 @@ public class ExtensionsServiceEndpointResource extends AbstractAuthGuardedRestRe
     endpoint.setInstalled(true);
     endpoint.setDescription(entity.getDescription());
     endpoint.setName(entity.getName());
-    endpoint.setAppId(entity.getAppId());
     endpoint.setType(type);
     endpoint.setAvailable(false);
     endpoint.setElementId(entity.getElementId());
@@ -186,6 +187,11 @@ public class ExtensionsServiceEndpointResource extends AbstractAuthGuardedRestRe
     endpoint.setEditable(!(entity.isInternallyManaged()));
     endpoint.setIncludesIcon(entity.isIncludesAssets() && entity.getIncludedAssets().contains(Assets.ICON));
     endpoint.setIncludesDocs(entity.isIncludesAssets() && entity.getIncludedAssets().contains(Assets.DOCUMENTATION));
+
+    if (!(entity instanceof SpDataStream)) {
+      endpoint.setAppId(entity.getAppId());
+    }
+
     return endpoint;
   }
 
